--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="main.js"></script>
   </head>
   <body>
     <h1>Dynamic Time Warping</h1>
-    <canvas class="dtw-handwrite-input" width="520" height="320">
+    <canvas class="dtw" width="520" height="320">
     </canvas>
   </body>
 </html>
